trafficyaml/optTraffic/custom/service-b-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service-b-dr
  namespace: paper2
spec:
  host: service-b
  subsets:
  - labels:
      version: service-b2
    name: service-b2
  - labels:
      version: service-b1
    name: service-b1
  - labels:
      version: service-b3
    name: service-b3
  trafficPolicy:
    loadBalancer:
      simple: LEAST_REQUEST
