trafficyaml/optTraffic/custom/service-b-to-service-c-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-b-to-service-c-vs
  namespace: paper2
spec:
  hosts:
  - service-c
  http:
  - match:
    - sourceLabels:
        app: service-b
        version: service-b1
    route:
    - destination:
        host: service-c
        subset: service-c1
      weight: 75    
    - destination:
        host: service-c
        subset: service-c3
      weight: 12
    - destination:
        host: service-c
        subset: service-c4
      weight: 13

  - match:
    - sourceLabels:
        app: service-b
        version: service-b2
    route:
    - destination:
        host: service-c
        subset: service-c2
      weight: 75    
    - destination:
        host: service-c
        subset: service-c3
      weight: 13
    - destination:
        host: service-c
        subset: service-c4
      weight: 12


  - match:
    - sourceLabels:
        app: service-b
        version: service-b3
    route:
    - destination:
        host: service-c
        subset: service-c3
      weight: 50    
    - destination:
        host: service-c
        subset: service-c4
      weight: 50
