trafficyaml/optTraffic/custom/service-c-to-service-d-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-c-to-service-d-vs
  namespace: paper2
spec:
  hosts:
  - service-d
  http:
  - match:
    - sourceLabels:
        app: service-c
        version: service-c1
    route:
    - destination:
        host: service-d
        subset: service-d1
      weight: 100


  - match:
    - sourceLabels:
        app: service-c
        version: service-c2
    route:
    - destination:
        host: service-d
        subset: service-d2
      weight: 100


  - match:
    - sourceLabels:
        app: service-c
        version: service-c3
    route:
    - destination:
        host: service-d
        subset: service-d3
      weight: 67
    - destination:
        host: service-d
        subset: service-d1
      weight: 16
    - destination:
        host: service-d
        subset: service-d2
      weight: 17   


  - match:
    - sourceLabels:
        app: service-c
        version: service-c4
    route:
    - destination:
        host: service-d
        subset: service-d3
      weight: 67
    - destination:
        host: service-d
        subset: service-d1
      weight: 17
    - destination:
        host: service-d
        subset: service-d2
      weight: 16
