trafficyaml/optTraffic/custom/service-d-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service-d-dr
  namespace: paper2
spec:
  host: service-d
  subsets:
  - labels:
      version: service-d1
    name: service-d1
  - labels:
      version: service-d2
    name: service-d2
  - labels:
      version: service-d3
    name: service-d3    
  trafficPolicy:
    loadBalancer:
      simple: LEAST_REQUEST
